# CompilationTheory

./: .gitignore  CMakeLists.txt
HW1/: Makefile  lex.yy.c  part_a.cpp  part_b.cpp  run_tests.sh  scanner.lex  tokens.hpp
HW1/tests/: b1.out  b5.out
HW2/: parser.ypp  scanner.lex
HW3/: Classes.h  Semantics.cpp  Semantics.h  SemanticsHandler.cpp  SemanticsHandler.h  Symbol_Table.cpp  Symbol_Table.h  hw3_output.cpp  hw3_output.hpp  lex.yy.c  parser.h  parser.tab.cpp  parser.tab.hpp  parser.ypp  run_tests.bash  scanner.lex  selfcheck-hw3.sh  tokens.hpp  zip_hw3.sh
HW3/tests/: t61.in
HW4/: Classes.h  RegisterFactory.cpp  RegisterFactory.h  parser.ypp
HW5/: Classes.h  parser.ypp
HW5-new/: CMakeLists.txt  Classes.h  RegisterFactory.cpp  RegisterFactory.h  Registers.cpp  Registers.h  Semantics.cpp  Semantics.h  parser.ypp  run_tests.sh  scanner.lex
hw1-tests/: b1.in  b2.in  b2.out  b4.out
